--- a/roles/k3s-kubernetes/defaults/main.yml
+++ b/roles/k3s-kubernetes/defaults/main.yml
@@ -143,3 +143,10 @@ install:
         block_size: 4096            # 512, 1024, 2048, or 4096
         rpm: "5400"                 # "" (let FreeNAS decide, currently defaults to SSD), Unknown, SSD, 5400, 7200, 10000, 15000
         avail_threshold: 0          # 0-100 (0 == ignore)
+
+      # Once installed and validated, a test claim can be processed.
+      test_claim:
+        enabled: true               # true = attempt iscsi storage claim
+        mode: "ReadWriteOnce"       # storage claim access mode
+        size: "1Gi"                 # size of claim to request ("1Gi" is 1 Gibibytes)
+        remove: true                # true = remove claim when test is completed (false leaves it alone)
