Added NFS Test Claims App

--- a/roles/k3s-kubernetes/tasks/09_install_democratic_csi_nfs.yml
+++ b/roles/k3s-kubernetes/tasks/09_install_democratic_csi_nfs.yml
@@ -34,6 +34,7 @@
       mode: '0660'
     loop:
       - "test-claim-nfs.yaml"
+      - "test-app-nfs-claim.yaml"
 
   - name: "Copy and Validate NFS Provisioner - {{install.democratic_csi.nfs.provisioner}}.yaml"
     template:
