--- a/roles/k3s-kubernetes/defaults/main.yml
+++ b/roles/k3s-kubernetes/defaults/main.yml
@@ -16,8 +16,12 @@ install:
       
     # Traefik Dashboard
     dashboard:
-      create_route: true
-      use_https: true
+      create_route: true                      # Create Ingress Router to make accessible 
+      enable_https: true                      # Require HTTPS to access dashboard
+      enable_basic_auth: true                # Require Authentication to access dashboard
+      
+      # Encoded users and passwords for basic authentication
+      allowed_users: "{{k3s.traefik.dashboard_users}}"    
 
   k3s:
     # Packages required for Ansible to issue Kubernetes and commands
