Prometheus & Grafana work in progress

--- a/roles/k3s-kubernetes/tasks/12_install_grafana.yml
+++ b/roles/k3s-kubernetes/tasks/12_install_grafana.yml
@@ -30,7 +30,7 @@
       namespace: "{{prometheus.namespace}}"
       wait: yes
       wait_timeout: 300
-
+  when:
+    - install.grafana.install_this|default(false)|bool == true
   tags:
-    - never
     - install_grafana
