--- a/roles/k3s-kubernetes/defaults/main.yml
+++ b/roles/k3s-kubernetes/defaults/main.yml
@@ -1,13 +1,23 @@
 ---
+###[ Ansible Configuration Options ]#############################################################
+# Do not log sensitive information / tokens, etc.  Maybe be handy to set to "false" during
+# troubleshooting if you need to see ansible vault secret values.
+no_log_secrets: true
+
 install:
   ###[ Linux OS Configuration ]####################################################################
   os:
-    non_root_user:
+    non_root_user:                            # Some specifics about the non-root user
       name: "kube"
       shell: "/bin/bash"
       groups: "sudo"
 
-    allow_passwordless_sudo: true
+    allow_passwordless_sudo: true             # Allow non-root use to passwordless sudo
+
+    remove_snapd:                             # Remove Snapd Demon, we don't need it.
+      remove_it: true
+      packages:
+        - snapd
 
   ###[ Traefik Installation Settings ]#############################################################
   traefik:
@@ -217,8 +227,34 @@ install:
         size: "1Gi"                 # size of claim to request ("1Gi" is 1 Gibibytes)
         remove: true                # true = remove claim when test is completed (false leaves it alone)
 
+  ###[ Longhorn Installation Settings ]############################################################
+  longhorn:
+    install_this: true              # Install longhorn distributed cluster storage
+
+    packages:
+      - open-iscsi
+
+    namespace: "longhorn-system"
+    release: "longhorn"
+
+    # Default location to store distributed cluster storage
+    # You should make this a ZFS dataset mount location to use a dedicated dataset
+    storage_dataset: "/var/lib/longhorn"
+
+    # Longhorn Dashboard
+    dashboard:
+      create_route: true           # Create Ingress Route to make accessible 
+      enable_basic_auth: true      # Require Authentication to access dashboard
+      path: "/longhorn"            # URI Path for Ingress Route
+
+    # The intent of longhorn is to be used instead of "local-path" storage class
+    # once Longhorn is installed "local-path" will be disabled as the default storage class
+    disable_local_path_as_default_storage_class: true
+
   ###[ Prometheus Operator Installation Settings ]#################################################
   prometheus:
+    install_this: true              # Install Prometheus Operator
+
     # Select release to use:  https://github.com/prometheus-operator/prometheus-operator/releases
     install_version: "v0.54.1"
 
@@ -242,7 +278,7 @@ install:
 
     kube_state_metrics:
       # https://github.com/kubernetes/kube-state-metrics/releases
-      install_version: "2.3.0"  #2.4.1
+      install_version: "2.4.2"  #2.3.0
       image_name: "k8s.gcr.io/kube-state-metrics/kube-state-metrics"
       node_selector: "kubernetes.io/os: linux"    # Any linux node
       # node_selector: "node-type: worker"        # custom label example
@@ -254,6 +290,8 @@ install:
 
   ###[ Grafana Installation Settings ]#############################################################
   grafana:
+    install_this: true              # Install Grafana
+
     image_name: "grafana/grafana"
     install_version: "latest"
 
