--- a/roles/k3s-kubernetes/tasks/11_install_longhorn.yml
+++ b/roles/k3s-kubernetes/tasks/11_install_longhorn.yml
@@ -22,21 +22,6 @@
       state: started
       name: open-iscsi
 
-  - name: Install Longhorn via Helm
-    kubernetes.core.helm:
-      update_repo_cache: yes
-      atomic: yes
-      create_namespace: yes
-      chart_ref: "{{longhorn.repo_chart_ref}}"
-      release_name: "{{install.longhorn.release}}"
-      release_namespace: "{{install.longhorn.namespace}}"
-      release_state: present
-      wait: yes
-      wait_timeout: 5m
-      values:
-        defaultSettings:
-          defaultDataPath: "{{install.longhorn.storage_dataset}}"
-
   - name: Create directory for Longhorn yaml files for non-root user
     file:
       path: "/home/{{install.os.non_root_user.name}}/longhorn"
@@ -54,6 +39,52 @@
       mode: '0660'
     loop:
       - "longhorn_traefik_ingress_route.yaml"
+
+  - name: Create ZFS Zvol for Longhorn
+    community.general.zfs:
+      name: "{{install.longhorn.zfs.pool}}/{{install.longhorn.zfs.volume_name}}"
+      extra_zfs_properties: "{{install.longhorn.zfs.zvol.options}}"
+      state: present
+
+  - name: Create Filesystem for Longhorn ZVOL
+    community.general.filesystem:
+      fstype: "{{longhorn.zfs.zvol.format}}"
+      dev: "/dev/zvol/{{install.longhorn.zfs.pool}}/{{install.longhorn.zfs.volume_name}}"
+
+  - name: Mount Longhorn Volume into /etc/fstab
+    ansible.posix.mount:
+      path: "{{install.longhorn.zfs.zvol.mountpoint}}"
+      src: "/dev/zvol/{{install.longhorn.zfs.pool}}/{{install.longhorn.zfs.volume_name}}"
+      opts: noatime,discard
+      fstype: "{{longhorn.zfs.zvol.format}}"
+      state: mounted
+
+  # Expected to return no output if not found
+  - name: Confirm Longhorn Volume is mounted
+    shell:
+      cmd: "findmnt -t {{longhorn.zfs.zvol.format|string}} --target {{install.longhorn.zfs.zvol.mountpoint}}"
+    register: longhorn_zvol
+
+  - name: Fail if Longhorn volume is not mounted
+    fail:
+      msg: "Longhorn volume not mounted as expected."
+    when:
+      - longhorn_zvol.stdout.find("TARGET")  == -1
+
+  - name: Install Longhorn via Helm
+    kubernetes.core.helm:
+      update_repo_cache: yes
+      atomic: yes
+      create_namespace: yes
+      chart_ref: "{{longhorn.repo_chart_ref}}"
+      release_name: "{{install.longhorn.release}}"
+      release_namespace: "{{install.longhorn.namespace}}"
+      release_state: present
+      wait: yes
+      wait_timeout: 5m
+      values:
+        defaultSettings:
+          defaultDataPath: "{{install.longhorn.zfs.zvol.mountpoint}}"
 
   - name: Add Longhorn Ingress Route for Traefik 
     kubernetes.core.k8s:
@@ -76,7 +107,6 @@
             storageclass.kubernetes.io/is-default-class: "false"
     when:
       - install.longhorn.disable_local_path_as_default_storage_class|default(false)|bool == true
-
 
   tags:
     - install_longhorn
