--- a/roles/k3s-kubernetes/vars/longhorn.yml
+++ b/roles/k3s-kubernetes/vars/longhorn.yml
@@ -2,5 +2,9 @@
 longhorn:
 # Define the Repo URL to download from:
   repo_url: "https://charts.longhorn.io"
-
   repo_chart_ref: "longhorn/longhorn"
+
+  zfs:
+    # Format of the filesystem used for Longhorn storage
+    zvol:
+      format: "xfs"
