--- a/roles/k3s-kubernetes/vars/longhorn.yml
+++ b/roles/k3s-kubernetes/vars/longhorn.yml
@@ -8,3 +8,5 @@ longhorn:
     # Format of the filesystem used for Longhorn storage
     zvol:
       format: "xfs"
+
+  dashboard_users: "{{LONGHORN_DASHBOARD_USERS}}"
