Updated fail message

--- a/tasks/08_validate_csi_iscsi.yml
+++ b/tasks/08_validate_csi_iscsi.yml
@@ -29,7 +29,7 @@
   - name: Fail if democratic-csi controller pod not running
     fail:
       msg: |
-        Unable to detect democratic-csi controller pod is running, try:
+        Unable to detect democratic-csi controller pod is running. Check this...
         
         kubectl get pods -n {{install.democratic_csi.iscsi.namespace}} -o wide
     when: csi_controller_running is not defined
